// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SyncPointTests modified-tempo-lookup 1`] = `
Map {
  Automation {
    "isLinear": false,
    "ratioPosition": 0,
    "syncPointValue": SyncPointData {
      "barOccurence": 0,
      "millisecondOffset": 0,
    },
    "text": "",
    "type": 4,
    "value": 0,
  } => BackingTrackSyncPoint {
    "masterBarIndex": 0,
    "masterBarOccurence": 0,
    "syncBpm": 60,
    "syncTime": 0,
    "synthBpm": 120,
    "synthTick": 0,
    "synthTime": 0,
  },
  Automation {
    "isLinear": false,
    "ratioPosition": 0,
    "syncPointValue": SyncPointData {
      "barOccurence": 0,
      "millisecondOffset": 8000,
    },
    "text": "",
    "type": 4,
    "value": 0,
  } => BackingTrackSyncPoint {
    "masterBarIndex": 2,
    "masterBarOccurence": 0,
    "syncBpm": 240,
    "syncTime": 8000,
    "synthBpm": 120,
    "synthTick": 7680,
    "synthTime": 4000,
  },
  Automation {
    "isLinear": false,
    "ratioPosition": 0,
    "syncPointValue": SyncPointData {
      "barOccurence": 0,
      "millisecondOffset": 10000,
    },
    "text": "",
    "type": 4,
    "value": 0,
  } => BackingTrackSyncPoint {
    "masterBarIndex": 4,
    "masterBarOccurence": 0,
    "syncBpm": 60,
    "syncTime": 10000,
    "synthBpm": 60,
    "synthTick": 15360,
    "synthTime": 8000,
  },
  Automation {
    "isLinear": false,
    "ratioPosition": 0,
    "syncPointValue": SyncPointData {
      "barOccurence": 0,
      "millisecondOffset": 14000,
    },
    "text": "",
    "type": 4,
    "value": 0,
  } => BackingTrackSyncPoint {
    "masterBarIndex": 5,
    "masterBarOccurence": 0,
    "syncBpm": 60,
    "syncTime": 14000,
    "synthBpm": 60,
    "synthTick": 19200,
    "synthTime": 12000,
  },
  Automation {
    "isLinear": false,
    "ratioPosition": 0,
    "syncPointValue": SyncPointData {
      "barOccurence": 0,
      "millisecondOffset": 26000,
    },
    "text": "",
    "type": 4,
    "value": 0,
  } => BackingTrackSyncPoint {
    "masterBarIndex": 8,
    "masterBarOccurence": 0,
    "syncBpm": 120,
    "syncTime": 26000,
    "synthBpm": 80,
    "synthTick": 30720,
    "synthTime": 24000,
  },
  Automation {
    "isLinear": false,
    "ratioPosition": 0,
    "syncPointValue": SyncPointData {
      "barOccurence": 0,
      "millisecondOffset": 28000,
    },
    "text": "",
    "type": 4,
    "value": 0,
  } => BackingTrackSyncPoint {
    "masterBarIndex": 9,
    "masterBarOccurence": 0,
    "syncBpm": 120,
    "syncTime": 28000,
    "synthBpm": 80,
    "synthTick": 34560,
    "synthTime": 27000,
  },
  Automation {
    "isLinear": false,
    "ratioPosition": 0,
    "syncPointValue": SyncPointData {
      "barOccurence": 1,
      "millisecondOffset": 36000,
    },
    "text": "",
    "type": 4,
    "value": 0,
  } => BackingTrackSyncPoint {
    "masterBarIndex": 9,
    "masterBarOccurence": 1,
    "syncBpm": 80,
    "syncTime": 36000,
    "synthBpm": 80,
    "synthTick": 49920,
    "synthTime": 39000,
  },
  Automation {
    "isLinear": false,
    "ratioPosition": 0,
    "syncPointValue": SyncPointData {
      "barOccurence": 1,
      "millisecondOffset": 39000,
    },
    "text": "",
    "type": 4,
    "value": 0,
  } => BackingTrackSyncPoint {
    "masterBarIndex": 10,
    "masterBarOccurence": 1,
    "syncBpm": 80,
    "syncTime": 39000,
    "synthBpm": 80,
    "synthTick": 53760,
    "synthTime": 42000,
  },
}
`;

exports[`SyncPointTests sync-point-generation 1`] = `
Array [
  BackingTrackSyncPoint {
    "masterBarIndex": 0,
    "masterBarOccurence": 0,
    "syncBpm": 60,
    "syncTime": 0,
    "synthBpm": 120,
    "synthTick": 0,
    "synthTime": 0,
  },
  BackingTrackSyncPoint {
    "masterBarIndex": 2,
    "masterBarOccurence": 0,
    "syncBpm": 240,
    "syncTime": 8000,
    "synthBpm": 120,
    "synthTick": 7680,
    "synthTime": 4000,
  },
  BackingTrackSyncPoint {
    "masterBarIndex": 4,
    "masterBarOccurence": 0,
    "syncBpm": 60,
    "syncTime": 10000,
    "synthBpm": 60,
    "synthTick": 15360,
    "synthTime": 8000,
  },
  BackingTrackSyncPoint {
    "masterBarIndex": 5,
    "masterBarOccurence": 0,
    "syncBpm": 60,
    "syncTime": 14000,
    "synthBpm": 60,
    "synthTick": 19200,
    "synthTime": 12000,
  },
  BackingTrackSyncPoint {
    "masterBarIndex": 8,
    "masterBarOccurence": 0,
    "syncBpm": 120,
    "syncTime": 26000,
    "synthBpm": 80,
    "synthTick": 30720,
    "synthTime": 24000,
  },
  BackingTrackSyncPoint {
    "masterBarIndex": 9,
    "masterBarOccurence": 0,
    "syncBpm": 120,
    "syncTime": 28000,
    "synthBpm": 80,
    "synthTick": 34560,
    "synthTime": 27000,
  },
  BackingTrackSyncPoint {
    "masterBarIndex": 9,
    "masterBarOccurence": 1,
    "syncBpm": 80,
    "syncTime": 36000,
    "synthBpm": 80,
    "synthTick": 49920,
    "synthTime": 39000,
  },
  BackingTrackSyncPoint {
    "masterBarIndex": 10,
    "masterBarOccurence": 1,
    "syncBpm": 80,
    "syncTime": 39000,
    "synthBpm": 80,
    "synthTick": 53760,
    "synthTime": 42000,
  },
  BackingTrackSyncPoint {
    "masterBarIndex": 11,
    "masterBarOccurence": 0,
    "syncBpm": 80,
    "syncTime": 45000,
    "synthBpm": 80,
    "synthTick": 61440,
    "synthTime": 48000,
  },
]
`;
